# master

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Connection.cpp  Connection.fwd.h  Connection.h  Makefile  Network.cpp  Network.h  Neuron.cpp  Neuron.h  README.md  main.cpp  run.sh  start.sh
NEAT/: Connection.cpp  Connection.h  Generation.cpp  Generation.h  Network.cpp  Network.h  Neuron.cpp  Neuron.fwd.h  Neuron.h  SimplifiedNeat.cpp  SimplifiedNeat.h  Spiecie.cpp  Spiecie.h  StandardNeat.cpp  StandardNeat.h  StructureMutator.cpp  StructureMutator.h
games/: Game.h
outfiles/: Error_13766136.err
release/: CMakeCache.txt  Makefile  master.txt  text.txt
savedData/: 40n_large_test_scores.csv  NEAT_3_raw__scores.csv  NEAT_3_scores.csv  NEAT_3_sizes__sizes.csv  NEAT_3_spieciesCount__spiecies.csv  NEAT_TEST_INVALID_scores.csv  NEAT_TEST_raw__scores.csv  NEAT_TEST_scores.csv  NEAT_TEST_scores.csv0  NEAT_TEST_sizes__scores.csv  NEAT_TEST_spieciesCount__scores.csv  Simpler_NEAT__raw__scores.csv  Simpler_NEAT__scores.csv  Simpler_NEAT__sizes__sizes.csv  Simpler_NEAT__spieciesCount__spiecies.csv  comparable_standard_NEAT_raw__scores.csv  comparable_standard_NEAT_scores.csv  comparable_standard_NEAT_sizes__sizes.csv  comparable_standard_NEAT_spieciesCount__spiecies.csv  correct_simpler_raw__scores0.csv  correct_simpler_scores0.csv  correct_simpler_sizes__sizes0.csv  correct_simpler_spieciesCount__spiecies0.csv  descriptions  descriptions.txt  larger_scores.csv  simpler_with_prunning_raw__scores.csv  simpler_with_prunning_scores.csv  simpler_with_prunning_sizes__sizes.csv  (+15 more)
(+32 files in other folders)
